Go back to Java 8